' Copyright (c) 2025 Contributors to the Eclipse Foundation
'
' See the NOTICE file(s) distributed with this work for additional
' information regarding copyright ownership.
'
' This program and the accompanying materials are made available under the
' terms of the Apache License Version 2.0 which is available at
' <https://www.apache.org/licenses/LICENSE-2.0>
'
' SPDX-License-Identifier: Apache-2.0

@startuml

interface Builder<Output> {
    build() : Output
}

' Also called "Node"
interface Runtime {
    type InstanceBuilder<I>
}

Interface RuntimeBuilder {
    load_config(&mut self, config: &Path): &mut Self
    build(self): Self::Runtime
}

Builder <-- RuntimeBuilder : Builder<Runtime>
RuntimeBuilder ..> Runtime : builds

interface Deref
interface DerefMut
Deref <-- DerefMut

interface Sample<T>
Deref <-- Sample : Deref::Target=T

interface SampleMut<T> {
    type Sample: Sample<T>
    into_sample(self) : Sample
    send(self) : Result
}
DerefMut <-- SampleMut : Deref::Target=T

interface SampleMaybeUninit<T> {
    type SampleMut: SampleMut<T>
    assume_init(self) : SampleMut
    write(self, data) : SampleMut
    as_mut_ptr(&mut self) : *mut T
}

SampleMaybeUninit ..> SampleMut : builds
Sample <.. SampleMut : builds

Runtime <- RuntimeImpl

interface ProducerBuilder {
  type Interface: Interface
}

RuntimeImpl ..> ProducerBuilder : creates

interface Producer {
  type Interface: Interface
}
interface OfferedProducer {
  type Interface: Interface
}

Builder <-- ProducerBuilder : Builder<Producer>
ProducerBuilder ..> Producer : builds
Producer ..> OfferedProducer : offer()
Producer <.. OfferedProducer : unoffer()

interface ServiceDiscovery {
  type Enumerator: IntoIterator<ConsumerBuilder>
}

RuntimeImpl ..> ServiceDiscovery : creates

interface ConsumerDescriptor {
  type Interface: Interface
}
interface ConsumerBuilder {
  type Interface: Interface
}
interface Consumer {
  type Interface: Interface
}

Builder <-- ConsumerBuilder : Consumer<Producer>
ServiceDiscovery ..> ServiceDiscovery::Enumerator : creates
ConsumerBuilder -o ServiceDiscovery::Enumerator
ConsumerDescriptor <-- ConsumerBuilder
ConsumerBuilder ..> Consumer : builds

interface Subscriber<T>
interface Subscription<T>
interface SampleContainer<S>

Sample "n" --o "1" SampleContainer

Subscriber ..> Subscription : subscribe()
Subscriber <.. Subscription : unsubscribe()

SampleContainer <.. Subscription : populates sample data <

Consumer "1" *- "n" Subscriber

interface Publisher<T>

Producer "1" *- "n" Publisher
Subscription <..> Publisher : event data exchange

@enduml
